# oasisx

./: .flake8  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/: linting.yml
.github/actions/linting/: action.yml
.github/workflows/: build_docs.yml  deploy.yml  docs.yml  linting.yml  pages.yml  pypi.yml  test_package.yml  test_stable.yml  tests.yml
demo/: assembly_bcs.py  assembly_strategies.py  demo.py  taylor_green.py
docs/: _config.yml  _toc.yml  api.rst  assembly_bcs.ipynb  assembly_strategies.ipynb  index.md  references.bib  splitting_schemes.md
docs/part1/: coverage.md  linting.md  packaging.md  typing.md
docs/part2/: citeable.md  github.md  issues.md  workflows.md
docs/part3/: auto_api.md  auto_demos.md  publishing.md
docs/part4/: badges.md
src/mypackage/: __init__.py  functions.py
src/oasisx/: __init__.py  __main__.py  bcs.py  fracstep.py  function.py  ksp.py  main.py  mesh.py
test/: test_assembly.py  test_bcs.py  test_code.py  test_projector.py  test_tentative_velocity.py
