[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]


[project]
name = "OasisX"
authors = [
    {name = "Jørgen S. Dokken", email = "dokken@simula.no"}
    ]
version = "0.1.0" # Version number
description = "A modern implementation of Oasis"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    'numpy'
]

[project.scripts]
oasisx = "oasisx.__main__:main"

[project.optional-dependencies]
test = [
   "flake8",
   "mypy",
   "pytest",
   "pytest-cov"
]

docs = [
    "jupyter-book",
    "jupytext",
    "seaborn",
]

binder = [
    "jupyterlab",
    "notebook"
]

[tool.mypy]
ignore_missing_imports = true # Does not show errors when importing untyped libraries
exclude = [
    "docs/_build", 
    "build/"
]
files = [
    "src",
    "test"
]

[tool.pytest.ini_options]
addopts = "--cov=oasisx --cov-report html --cov-append --cov-report term-missing -v"
testpaths = [
    "test"
]


[tool.jupytext.formats]
"docs/" = "ipynb"
"demo/" = "py:light"